k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beewaf
  labels:
    app.kubernetes.io/name: beewaf
    app.kubernetes.io/part-of: beewaf-waf
